reorganized code for /grid_progressive

--- a/grid_progressive/index.html
+++ b/grid_progressive/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="../css/site.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/grid.css" />
+  <link rel="stylesheet" href="css/layout.css" />
 </head>
 <body>
 
@@ -13,15 +13,13 @@
   <div class="row">
     <div class="column">
       <main class="content">
-        <p>
-          Vestibulum varius scelerisque facilisis. Nunc interdum sapien vel diam ultrices laoreet. Fusce finibus leo nulla, sed suscipit tortor eleifend vitae. Donec luctus nisl vel volutpat viverra. Mauris convallis fringilla nisl, a porta dolor ultrices nec. Proin porttitor viverra tristique. Vivamus tempor commodo malesuada. Vivamus vitae nulla ornare, mollis sem a, hendrerit velit. Pellentesque laoreet eros leo, at ultricies neque imperdiet et. Quisque viverra libero ut risus hendrerit, sit amet imperdiet lorem mattis. Vivamus iaculis diam nisl, ut vestibulum dui ultricies in. Pellentesque dapibus interdum dui, quis aliquam mi vehicula in. Aliquam placerat consequat tellus, finibus convallis nibh. Vestibulum eget tristique enim. Morbi vestibulum leo ut gravida euismod.
-        </p>
+        <p>Vestibulum varius scelerisque facilisis. Nunc interdum sapien vel diam ultrices laoreet. Fusce finibus leo nulla, sed suscipit tortor eleifend vitae. Donec luctus nisl vel volutpat viverra. Mauris convallis fringilla nisl, a porta dolor ultrices nec. Proin porttitor viverra tristique. Vivamus tempor commodo malesuada. Vivamus vitae nulla ornare, mollis sem a, hendrerit velit. Pellentesque laoreet eros leo, at ultricies neque imperdiet et. Quisque viverra libero ut risus hendrerit, sit amet imperdiet lorem mattis. Vivamus iaculis diam nisl, ut vestibulum dui ultricies in. Pellentesque dapibus interdum dui, quis aliquam mi vehicula in. Aliquam placerat consequat tellus, finibus convallis nibh. Vestibulum eget tristique enim. Morbi vestibulum leo ut gravida euismod.</p>
       </main>
       <div class="content-bottom"></div>
-    </div>
+    </div><!-- .column -->
     <aside class="sidebar-primary"></aside>
     <aside class="sidebar-secondary"></aside>
-  </div>
+  </div><!-- .row -->
 
   <footer class="footer"></footer>
 
