--- a/grid-layout/index.html
+++ b/grid-layout/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="../css/site.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/grid.css" />
+  <link rel="stylesheet" href="css/layout.css" />
 </head>
 <body>
 
