--- a/columns_footer/index.html
+++ b/columns_footer/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" href="../css/site.css" />
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/columns.css" />
+  <link rel="stylesheet" href="css/layout.css" />
   <script src="../js/jquery-3.3.1.min.js"></script>
 </head>
 
@@ -10,238 +10,198 @@
 
   <section class="floats">
     <h1>Floats</h1>
-    <div class="cards">
+    <div class="columns">
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Sandwiches</h3>
+        <ul>
+          <li><a href="#">McDonald's</a></li>
+          <li><a href="#">In-N-Out</a></li>
+          <li><a href="#">Burger King</a></li>
+          <li><a href="#">Chick-Fil-A</a></li>
+          <li><a href="#">TK Burger</a></li>
+          <li><a href="#">Quiznos</a></li>
+          <li><a href="#">Ike's Sandwiches</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Mexican Food</h3>
+        <ul>
+          <li><a href="#">Del Taco</a></li>
+          <li><a href="#">Chipotle Mexican Grill</a></li>
+          <li><a href="#">Acapulco's Lunch Buffet</a></li>
+          <li><a href="#">Alberto's</a></li>
+          <li><a href="#">Taco King</a></li>
+          <li><a href="#">King of Corn Truck</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, consectetur adipiscing elit, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Beer</h3>
+        <ul>
+          <li><a href="#">Miller Lite</a></li>
+          <li><a href="#">Bud Light</a></li>
+          <li><a href="#">Budweiser</a></li>
+          <li><a href="#">Coors Light</a></li>
+          <li><a href="#">Rolling Rock</a></li>
+          <li><a href="#">Corona Extra</a></li>
+          <li><a href="#">Heineken</a></li>
+          <li><a href="#">Blue Moon</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Strippers</h3>
+        <ul>
+          <li><a href="#">Andie</a></li>
+          <li><a href="#">Mandy</a></li>
+          <li><a href="#">Brandy</a></li>
+          <li><a href="#">Candy</a></li>
+          <li><a href="#">Sandy</a></li>
+          <li><a href="#">Tandie</a></li>
+          <li><a href="#">Dirty Fernie</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-    </div><!-- cards -->
+    </div><!-- columns -->
   </section>
 
 
   <section class="inline-blocks">
     <h1>Inline Block</h1>
-    <div class="cards">
+    <div class="columns">
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Sandwiches</h3>
+        <ul>
+          <li><a href="#">McDonald's</a></li>
+          <li><a href="#">In-N-Out</a></li>
+          <li><a href="#">Burger King</a></li>
+          <li><a href="#">Chick-Fil-A</a></li>
+          <li><a href="#">TK Burger</a></li>
+          <li><a href="#">Quiznos</a></li>
+          <li><a href="#">Ike's Sandwiches</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Mexican Food</h3>
+        <ul>
+          <li><a href="#">Del Taco</a></li>
+          <li><a href="#">Chipotle Mexican Grill</a></li>
+          <li><a href="#">Acapulco's Lunch Buffet</a></li>
+          <li><a href="#">Alberto's</a></li>
+          <li><a href="#">Taco King</a></li>
+          <li><a href="#">King of Corn Truck</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, consectetur adipiscing elit, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Beer</h3>
+        <ul>
+          <li><a href="#">Miller Lite</a></li>
+          <li><a href="#">Bud Light</a></li>
+          <li><a href="#">Budweiser</a></li>
+          <li><a href="#">Coors Light</a></li>
+          <li><a href="#">Rolling Rock</a></li>
+          <li><a href="#">Corona Extra</a></li>
+          <li><a href="#">Heineken</a></li>
+          <li><a href="#">Blue Moon</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Strippers</h3>
+        <ul>
+          <li><a href="#">Andie</a></li>
+          <li><a href="#">Mandy</a></li>
+          <li><a href="#">Brandy</a></li>
+          <li><a href="#">Candy</a></li>
+          <li><a href="#">Sandy</a></li>
+          <li><a href="#">Tandie</a></li>
+          <li><a href="#">Dirty Fernie</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-    </div><!-- cards -->
+    </div><!-- columns -->
   </section>
 
 
   <section class="flexbox">
     <h1>Flexbox</h1>
-    <div class="cards">
+    <div class="columns">
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Sandwiches</h3>
+        <ul>
+          <li><a href="#">McDonald's</a></li>
+          <li><a href="#">In-N-Out</a></li>
+          <li><a href="#">Burger King</a></li>
+          <li><a href="#">Chick-Fil-A</a></li>
+          <li><a href="#">TK Burger</a></li>
+          <li><a href="#">Quiznos</a></li>
+          <li><a href="#">Ike's Sandwiches</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Mexican Food</h3>
+        <ul>
+          <li><a href="#">Del Taco</a></li>
+          <li><a href="#">Chipotle Mexican Grill</a></li>
+          <li><a href="#">Acapulco's Lunch Buffet</a></li>
+          <li><a href="#">Alberto's</a></li>
+          <li><a href="#">Taco King</a></li>
+          <li><a href="#">King of Corn Truck</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, consectetur adipiscing elit, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Beer</h3>
+        <ul>
+          <li><a href="#">Miller Lite</a></li>
+          <li><a href="#">Bud Light</a></li>
+          <li><a href="#">Budweiser</a></li>
+          <li><a href="#">Coors Light</a></li>
+          <li><a href="#">Rolling Rock</a></li>
+          <li><a href="#">Corona Extra</a></li>
+          <li><a href="#">Heineken</a></li>
+          <li><a href="#">Blue Moon</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
+      <div class="column">
+        <h3>Strippers</h3>
+        <ul>
+          <li><a href="#">Andie</a></li>
+          <li><a href="#">Mandy</a></li>
+          <li><a href="#">Brandy</a></li>
+          <li><a href="#">Candy</a></li>
+          <li><a href="#">Sandy</a></li>
+          <li><a href="#">Tandie</a></li>
+          <li><a href="#">Dirty Fernie</a></li>
+        </ul>
+        <a class="column-dismiss" data-jquery="dimiss">X</a>
       </div>
 
-    </div><!-- cards -->
-  </section>
-
-
-  <section class="grid">
-    <h1>Grid</h1>
-    <div class="cards">
-
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, consectetur adipiscing elit, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, consectetur adipiscing elit, sagittis id rutrum quis, lacinia a lorem.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <img class="card-thumb" src="images/320x240.png" />
-        <div class="card-body">
-          <div class="card-description">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis enim metus, sagittis id rutrum quis.</p>
-          </div>
-          <a class="card-dismiss" data-jquery="dimiss">Dismiss</a>
-        </div>
-      </div>
-
-    </div><!-- cards -->
+    </div><!-- columns -->
   </section>
 
   <script>
     function dismiss() {
-      $(this).parent().parent().fadeOut();
+      $(this).parent().fadeOut();
     }
 
     $('[data-jquery="dimiss"]').on( "click", dismiss);
