switched layouts based on media query instead of links

--- a/grid-layout/index.html
+++ b/grid-layout/index.html
@@ -9,17 +9,7 @@
 
   <div class="blue"></div>
 
-  <div class="dark-blue">
-    <a href="#default">Home</a>
-    <a href="#alt2">Alternate 2</a>
-    <a href="#alt3">Alternate 3</a>
-    <a href="#alt4">Alternate 4</a>
-    <a href="#alt5">Alternate 5</a>
-    <a href="#alt6">Alternate 6</a>
-    <a href="#alt7">Alternate 7</a>
-    <a href="#alt8">Alternate 8</a>
-    <a href="#alt9">Alternate 9</a>
-  </div>
+  <div class="dark-blue"></div>
 
   <div class="content">
     <p>Vestibulum varius scelerisque facilisis. Nunc interdum sapien vel diam ultrices laoreet. Fusce finibus leo nulla, sed suscipit tortor eleifend vitae. Donec luctus nisl vel volutpat viverra. Mauris convallis fringilla nisl, a porta dolor ultrices nec. Proin porttitor viverra tristique. Vivamus tempor commodo malesuada. Vivamus vitae nulla ornare, mollis sem a, hendrerit velit. Pellentesque laoreet eros leo, at ultricies neque imperdiet et. Quisque viverra libero ut risus hendrerit, sit amet imperdiet lorem mattis. Vivamus iaculis diam nisl, ut vestibulum dui ultricies in. Pellentesque dapibus interdum dui, quis aliquam mi vehicula in. Aliquam placerat consequat tellus, finibus convallis nibh. Vestibulum eget tristique enim. Morbi vestibulum leo ut gravida euismod.</p>
